--- a/src/main/webapp/consulta.xhtml
+++ b/src/main/webapp/consulta.xhtml
@@ -14,7 +14,7 @@
 
 </h:head>
 <h:body styleClass="container">
-	<h1 class="cabecalho">Lista Cadastro Sistema Fianceiro</h1>
+	<h1 class="cabecalho">Lista Cadastro - Sistema Financeiro</h1>
 	<h1>
 		<h:graphicImage value="/resources/images/note.png" width="30"
 			height="30" />
